testdata/invalid/invalid_struct_double_deprecated.bop
struct Test {
    [deprecated("hello")]
    [deprecated("world")]
    int64 one;
}